styles for homepage

--- a/app/src/styles/general.scss
+++ b/app/src/styles/general.scss
@@ -32,8 +32,12 @@ img {
    max-width: 100%;
 }
 
+p {
+   line-height: 2.5rem;
+}
+
 .container {
-   max-width: 1000px;
+   max-width: 1800px;
    width: 100%;
    padding: 0 2rem;
    margin: auto;
