--- a/app/src/styles/app.scss
+++ b/app/src/styles/app.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
 @import './variables.scss';
 @import './general.scss';
-@import './header/header.scss';
+@import './header.scss';
 @import './home.scss';
