--- a/app/src/styles/variables.scss
+++ b/app/src/styles/variables.scss
@@ -1,1 +1,6 @@
-$bodyColor: coral;
+$mainColor: #91204D;
+$accentColor: #D3552E;
+$darkMain: #452732;
+$lightAccentColor: #E0BA60;
+$backgroundAccentColor: #E0F779;
+$rgbaBgAccentColor: rgba(224, 247, 121, 0.5);
