--- a/app/src/styles/home.scss
+++ b/app/src/styles/home.scss
@@ -67,6 +67,7 @@
 .f-box {
    background-color: $lightAccentColor;
    position: relative;
+   box-shadow: 0 2px 6px 0 rgba(32, 33, 36, 0.28);
 
    &::after {
       content: ' ';
@@ -74,13 +75,13 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      left: 1.5rem;
+      left: 1rem;
       top: 1rem;
       z-index: -1;
    }
 
    .icons {
-      background-color: $darkMain;
+      background-color: $accentColor;
       color: white;
       position: absolute;
       top: -2rem;
@@ -88,12 +89,13 @@
       width: 2rem;
       height: 2rem;
       border-radius: 50%;
-      border: 1px solid $darkMain;
+      border: 1px solid $accentColor;
       padding: 3rem;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 2.5rem;
+      box-shadow: 0 2px 6px 0 rgba(32, 33, 36, 0.28);
    }
 
    .img-container {
