completed home page. Desktop.

--- a/app/src/styles/home.scss
+++ b/app/src/styles/home.scss
@@ -21,7 +21,7 @@
          -webkit-writing-mode: vertical-lr;
          -ms-writing-mode: tb-lr;
          writing-mode: vertical-lr;
-         font-size: 12rem;
+         font-size: $sideFont;
          letter-spacing: 1rem;
          color: rgba(255, 255, 255, 0.4);
          text-transform: uppercase;
@@ -52,16 +52,22 @@
 
 // Features
 .featured {
-   padding: 2rem;
    height: 50rem;
    display: flex;
    align-items: center;
+
+   h2 {
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 6rem;
+   }
 }
 
 .f-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 4rem;
+   margin-top: 2rem;
 }
 
 .f-box {
@@ -95,7 +101,7 @@
       align-items: center;
       justify-content: center;
       font-size: 2.5rem;
-      box-shadow: 0 2px 6px 0 rgba(32, 33, 36, 0.28);
+      box-shadow: 0 3px 6px 0 $backdropShadow;
    }
 
    .img-container {
@@ -105,5 +111,39 @@
 
    .content {
       padding: 1rem;
+   }
+}
+
+// Closing section
+.closing {
+   height: 380px;
+   display: flex;
+
+   .c-sides {
+      flex-basis: 50%;
+      position: relative;
+
+      .c-text {
+         background-color: rgba(0,0,0,0.6);
+         color: #fff;
+         position: absolute;
+         top:0;
+         bottom:0;
+         left: 0;
+         right: 0;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         font-size: 3rem;
+      }
+   }
+
+   .img-wrapper {
+      overflow: hidden;
+      height: 100%;
+   }
+
+   img {
+      width:100%;
    }
 }
