--- a/app/src/styles/variables.scss
+++ b/app/src/styles/variables.scss
@@ -3,4 +3,8 @@ $accentColor: #D3552E;
 $darkMain: #452732;
 $lightAccentColor: #E0BA60;
 $backgroundAccentColor: #E0F779;
-$rgbaBgAccentColor: rgba(224, 247, 121, 0.5);
+$rgbaBgAccentColor: rgba(224, 247, 121, 0.6);
+$backdropShadow: rgba(32, 33, 36, 0.28);
+
+//Fonts
+$sideFont: 12rem;
