--- a/app/src/styles/general.scss
+++ b/app/src/styles/general.scss
@@ -24,6 +24,31 @@ h5 {
    letter-spacing: 0.2rem;
 }
 
+.h1,
+h1 {
+   font-size: 3.6rem;
+}
+
+.h2,
+h2 {
+   font-size: 3rem;
+}
+
+.h3,
+h3 {
+   font-size: 2.5rem;
+}
+
+.h4,
+h4 {
+   font-size: 2rem;
+}
+
+.h5,
+h5 {
+   font-size: 1.75rem;
+}
+
 a {
    text-decoration: none;
 }
