--- a/app/src/styles/forms.scss
+++ b/app/src/styles/forms.scss
@@ -3,4 +3,17 @@
    border: 1px solid #2c2c2c;
    margin: auto;
    padding: 2rem;
+
+   .btn {
+      margin-right: 1rem;
+   }
+}
+
+// Reactstrap overrides
+.form-control {
+   font-size: 1.6rem;
+}
+
+.btn {
+   font-size: 1.6rem;
 }
