--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -4,5 +4,6 @@
 @import './header.scss';
 @import './home.scss';
 @import './forms.scss';
+@import './ingredients.scss';
 @import './footer.scss';
 @import './footer.scss';
